# bevy_turtlebot4_testbed

./: .pre-commit-config.yaml  BEVY_UPGRADE_RESEARCH.md  CAMERA_IMPLEMENTATION.md  Cargo.toml  HOOKS.md  IMPLEMENTATION_SUMMARY.md  README.md  SDF_README.md  sdf_mesh_converter.py
.githooks/: pre-commit  run-ci.sh
.github/workflows/: ci.yml
assets/UR3e/: base.glb  link1.glb  link2.glb  link3.glb  link4.glb  link5.glb  link6.glb
assets/robots/: turtlebot4.glb
assets/robots/UR3e/: base.glb  link1.glb  link2.glb  link3.glb  link4.glb  link5.glb  link6.glb
assets/robots/urdf/: base_link.STL  front_cover_link.STL  left_leg_link.STL  left_shoulder_link.STL  left_upper_link.STL  left_wheel_link.STL  rear_cover_link.STL  right_leg_link.STL  right_shoulder_link.STL  right_upper_link.STL  right_wheel_link.STL  sample.urdf  test.urdf  test_cube.STL
assets/worlds/: simple_world.sdf
src/: camera.rs  camera_sensor.rs  drag.rs  keyboard_controls.rs  lidar.rs  main.rs  robot_drag.rs  robotic_arm.rs  sdf_loader.rs  sdf_world_loader.rs  sdf_world_simple.rs  stl_loader.rs  tests.rs  turtlebot4.rs  urdf_loader.rs  world_builder.rs
