[package]
name = "bevy_turtlebot4_testbed"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = ["wayland", "dynamic_linking", "jpeg"] }
bevy_rapier3d = { version = "0.30.0", features = ["debug-render-3d"] }
tracing = "0.1"
quick-xml = "0.31"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
approx = "0.5"

[profile.dev.package."*"]
opt-level = 3
