[package]
name = "bevy_turtlebot4_testbed"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", features = ["jpeg"] }
bevy_rapier3d = { version = "0.30.0", features = ["debug-render-3d"] }
bevy_stl = "0.16"
bevy_obj = "0.16"

clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
quick-xml = "0.31"
rand = "0.8"
rand_distr = "0.4"
regex = "1.10"

[dev-dependencies]
approx = "0.5"

[profile.dev.package."*"]
opt-level = 0

[profile.dev]
debug = 0
